--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.11.5"
+    "@astrojs/rss": "^4.0.7",
+    "astro": "^4.15.8"
   }
 }
