--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/preact": "^4.1.0",
     "@astrojs/rss": "^4.0.12",
     "@fontsource-variable/noto-serif-georgian": "^5.2.7",
+    "@fontsource-variable/nunito": "^5.2.6",
     "@fontsource-variable/winky-rough": "^5.2.4",
     "astro": "^5.12.5",
     "preact": "^10.24.1"
