changed index and dividers

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -29,6 +29,7 @@
     "jsx": "preserve",
     // Enable strict mode. This enables a few options at a time, see https://www.typescriptlang.org/tsconfig#strict for a list.
     "strict": true,
+    "strictNullChecks": true
   },
   "exclude": ["${configDir}/dist"],
   "include": ["${configDir}/.astro/types.d.ts", "${configDir}/**/*"]
